--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/patiens
+spring.datasource.username=ander
+spring.datasource.password=1234
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.diatect=org.hibernate.dialect.PostgresSqlDialect
+spring.jpa.properties.hibernate.format_sql=true
 
+#server.error.include-message=always
