--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,4 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.diatect=org.hibernate.dialect.PostgresSqlDialect
 spring.jpa.properties.hibernate.format_sql=true
 
-#server.error.include-message=always
+server.error.include-message=always
